<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_demo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dong.work.LoginDemo"
    android:orientation="vertical">
<EditText
    android:id="@+id/et_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_name"
    />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pwd"/>
    <EditText
        android:id="@+id/et_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_path"
        />
    <Button
        android:layout_gravity="right"
        android:id="@+id/bt_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_text"
        android:onClick="getLogin"/>
    <Button
        android:layout_gravity="right"
        android:id="@+id/bt_postLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_post"
        android:onClick="postLogin"/>
    <Button
        android:layout_gravity="right"
        android:id="@+id/bt_postLogin_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_post_text_file"
        android:onClick="postLoginFile"/>
</LinearLayout>
