<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_blue_tooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dong.work.BlueToothDemo"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blueTooth"
        android:textSize="24sp"
      />
    <Button
        android:id="@+id/bt_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on"/>
    <Button
        android:id="@+id/bt_visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visible"/>

    <Button
        android:id="@+id/bt_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_off"/>
    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>
